k8s/overlays/dev/kong/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: konghq.com/ingress-controller
