k8s/overlays/dev/kong/kong-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-ingress
  labels:
    app: kong-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-ingress
  template:
    metadata:
      labels:
        app: kong-ingress
    spec:
      serviceAccountName: kong-ingress
      containers:
        - name: controller
          image: kong/kubernetes-ingress-controller:3.3
          args:
            - --ingress-class=kong
            - --publish-service=dev/kong-proxy
            - --log-level=info
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
