k8s/overlays/dev/kong/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-admin
  labels:
    app: kong
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
    - name: admin
      port: 8001
      targetPort: 8001
    - name: manager
      port: 8002
      targetPort: 8002
