k8s/overlays/dev/kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  labels:
    app: kong
spec:
  type: ClusterIP
  selector:
    app: kong
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: https
      port: 443
      targetPort: 8443
